# android-native-cxx-sample

./: CMakeLists.txt  README.md  makefile
cmake/: FindLibevent.cmake  FindProtobuf.cmake
src/: CMakeLists.txt  main.cpp
